Fixed Z-index of table component

--- a/src/modules/Accounting/components/table/Table.css
+++ b/src/modules/Accounting/components/table/Table.css
@@ -21,7 +21,6 @@
   top: 0;
   background-color: #00a8a8;
   color: white;
-  z-index: 2;
 }
 
 .accounting-table th,
